Bug 539323. Position the caret at the content-edge of its container frame, not the border-edge. r=mats